; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_checkpointer.c_CheckArchiveTimeout.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_checkpointer.c_CheckArchiveTimeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XLogArchiveTimeout = common dso_local global i32 0, align 4
@last_xlog_switch_time = common dso_local global i64 0, align 8
@wal_segment_size = common dso_local global i32 0, align 4
@DEBUG1 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"write-ahead log switch forced (archive_timeout=%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CheckArchiveTimeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CheckArchiveTimeout() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = load i32, i32* @XLogArchiveTimeout, align 4
  %6 = icmp sle i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %0
  %8 = call i64 (...) @RecoveryInProgress()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %0
  br label %48

11:                                               ; preds = %7
  %12 = call i64 @time(i32* null)
  store i64 %12, i64* %1, align 8
  %13 = load i64, i64* %1, align 8
  %14 = load i64, i64* @last_xlog_switch_time, align 8
  %15 = sub nsw i64 %13, %14
  %16 = trunc i64 %15 to i32
  %17 = load i32, i32* @XLogArchiveTimeout, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %11
  br label %48

20:                                               ; preds = %11
  %21 = call i64 @GetLastSegSwitchData(i64* %3)
  store i64 %21, i64* %2, align 8
  %22 = load i64, i64* @last_xlog_switch_time, align 8
  %23 = load i64, i64* %2, align 8
  %24 = call i64 @Max(i64 %22, i64 %23)
  store i64 %24, i64* @last_xlog_switch_time, align 8
  %25 = load i64, i64* %1, align 8
  %26 = load i64, i64* @last_xlog_switch_time, align 8
  %27 = sub nsw i64 %25, %26
  %28 = trunc i64 %27 to i32
  %29 = load i32, i32* @XLogArchiveTimeout, align 4
  %30 = icmp sge i32 %28, %29
  br i1 %30, label %31, label %48

31:                                               ; preds = %20
  %32 = call i64 (...) @GetLastImportantRecPtr()
  %33 = load i64, i64* %3, align 8
  %34 = icmp sgt i64 %32, %33
  br i1 %34, label %35, label %46

35:                                               ; preds = %31
  %36 = call i64 @RequestXLogSwitch(i32 1)
  store i64 %36, i64* %4, align 8
  %37 = load i64, i64* %4, align 8
  %38 = load i32, i32* @wal_segment_size, align 4
  %39 = call i64 @XLogSegmentOffset(i64 %37, i32 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %45

41:                                               ; preds = %35
  %42 = load i32, i32* @DEBUG1, align 4
  %43 = load i32, i32* @XLogArchiveTimeout, align 4
  %44 = call i32 @elog(i32 %42, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %43)
  br label %45

45:                                               ; preds = %41, %35
  br label %46

46:                                               ; preds = %45, %31
  %47 = load i64, i64* %1, align 8
  store i64 %47, i64* @last_xlog_switch_time, align 8
  br label %48

48:                                               ; preds = %10, %19, %46, %20
  ret void
}

declare dso_local i64 @RecoveryInProgress(...) #1

declare dso_local i64 @time(i32*) #1

declare dso_local i64 @GetLastSegSwitchData(i64*) #1

declare dso_local i64 @Max(i64, i64) #1

declare dso_local i64 @GetLastImportantRecPtr(...) #1

declare dso_local i64 @RequestXLogSwitch(i32) #1

declare dso_local i64 @XLogSegmentOffset(i64, i32) #1

declare dso_local i32 @elog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
